--- a/ardupilot2ros/config/warthog_cpr_sim.yaml
+++ b/ardupilot2ros/config/warthog_cpr_sim.yaml
@@ -11,21 +11,21 @@ cmd_vel:
                              0,  0,  0,  1]
 imu:
   topic: "/imu/data"
-  # NED to ENU
+  # NWU to ENU
   angular_velocity_transform_matrix: [ 1,  0,  0,  0,
-                                       0, -1,  0,  0,
-                                       0,  0, -1,  0,
+                                       0,  1,  0,  0,
+                                       0,  0,  1,  0,
                                        0,  0,  0,  1]
   linear_acceleration_transform_matrix: [ 1,  0,  0,  0,
-                                          0, -1,  0,  0,
-                                          0,  0, -1,  0,
+                                          0,  1,  0,  0,
+                                          0,  0,  1,  0,
                                           0,  0,  0,  1]
   RPY_transform_matrix: [ 1,  0,  0,  0,
-                          0, -1,  0,  0,
-                          0,  0, -1,  1.5708,
+                          0,  1,  0,  0,
+                          0,  0,  1,  1.5708,
                           0,  0,  0,  1]
 fix:
-  topic: "/fix"
+  topic: "/navsat/fix"
 vel:
   topic: "/vel"
   # NWU to ENU
@@ -38,7 +38,7 @@ vel:
                              0,  0,  1,  0,
                              0,  0,  0,  1]
 bOverrideFixStatus: true
-max_linear_x_speed: 3.0
-max_angular_z_speed: 3.0
-szVectorNavInterfacePath: "127.0.0.1:5765"
+max_linear_x_speed: 4.0
+max_angular_z_speed: 4.0
+szVectorNavInterfacePath: "192.168.0.16:5765"
 rate: 50
