--- a/imu_conv/package.xml
+++ b/imu_conv/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ardupilot2ros</name>
+  <name>imu_conv</name>
   <version>0.0.0</version>
-  <description>The ardupilot2ros package</description>
+  <description>The imu_conv package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ardupilot2ros</url> -->
+  <!-- <url type="website">http://wiki.ros.org/imu_conv</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
